--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,14 @@
 <div class="container">
-  <h1>Welcome to the Angular App</h1>
-  <h2>User Information</h2>
-  <p>Name: {{ userName }}</p>
-  <p>Total Marks: {{ userMarks }}</p>
+  <h2>User List</h2>
+  <div *ngFor="let user of userList" class="user-card">
+    <h3>{{ user.firstName }} {{ user.lastName }}</h3>
+    <p>ID: {{ user.id }}</p>
+    <p>Email: {{ user.email }}</p>
+    <p>Admin: {{ user.isAdmin ? 'Yes' : 'No' }}</p>
+
+    <!-- button to toggle admin status -->
+    <button (click)="toggleAdminStatus(user)"class="toggle-button">
+      Toggle Admin Status
+    </button>
+  </div>
 </div>
