--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,1 @@
-<div class="container">
-  <h2>My Third Semesters Progress</h2>
-  <div *ngFor="let user of userList" class="user-card">
-    <h3>{{ user.instructorName }} </h3>
-    <p>ID: {{ user.id }}</p>
-    <p>Email: {{ user.email }}</p>
-    <p>Admin: {{ user.isAdmin ? 'Yes' : 'No' }}</p>
-    <p>Admin: {{ user.marks }}</p>
-
-    <!-- button to toggle admin status -->
-    <button (click)="toggleAdminStatus(user)"class="toggle-button">
-      Toggle Admin Status
-    </button>
-  </div>
-</div>
+<app-course-list></app-course-list>
