add placeholder for course detal components

--- a/src/app/course-list/course-list.component.html
+++ b/src/app/course-list/course-list.component.html
@@ -1,1 +1,6 @@
-<p>course-list works!</p>
+<app-course-detail></app-course-detail>
+<app-course-detail></app-course-detail>
+<app-course-detail></app-course-detail>
+<app-course-detail></app-course-detail>
+<app-course-detail></app-course-detail>
+<app-course-detail></app-course-detail>
