--- a/src/app/course-detail/course-detail.component.html
+++ b/src/app/course-detail/course-detail.component.html
@@ -1,1 +1,5 @@
-<p>course-detail works!</p>
+<div style="border: 2px solid #000; padding: 10px; margin: 10px;">
+  <h2>{{ course.subjectCode }}</h2>
+  <p> {{ course.instructorName }}</p>
+  <p> {{ course.email }}</p>
+</div>
