--- a/src/app/course-list/course-list.component.html
+++ b/src/app/course-list/course-list.component.html
@@ -1,6 +1,8 @@
-<app-course-detail [course]="courses[0]"></app-course-detail>
-<app-course-detail [course]="courses[1]"></app-course-detail>
-<app-course-detail [course]="courses[2]"></app-course-detail>
-<app-course-detail [course]="courses[3]"></app-course-detail>
-<app-course-detail [course]="courses[4]"></app-course-detail>
-<app-course-detail [course]="courses[5]"></app-course-detail>
+<!--<app-course-detail [course]="courses[0]"></app-course-detail>-->
+<!--<app-course-detail [course]="courses[1]"></app-course-detail>-->
+<!--<app-course-detail [course]="courses[2]"></app-course-detail>-->
+<!--<app-course-detail [course]="courses[3]"></app-course-detail>-->
+<!--<app-course-detail [course]="courses[4]"></app-course-detail>-->
+<!--<app-course-detail [course]="courses[5]"></app-course-detail>-->
+
+<app-course-detail *ngFor="let course of courses" [course]="course"></app-course-detail>
