add images to course details

--- a/src/app/course-detail/course-detail.component.html
+++ b/src/app/course-detail/course-detail.component.html
@@ -2,4 +2,5 @@
   <h2>{{ course.subjectCode }}</h2>
   <p> {{ course.instructorName }}</p>
   <p> {{ course.email }}</p>
+  <img [src] = "course.imageURL" alt="{{ course.title}} image">
 </div>
