--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<app-course-list></app-course-list>
+
+<div class="app-container">
+  <h1>{{ title }}</h1>
+  <app-course-list></app-course-list>
+</div>
