fix the click when selected

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,10 @@
 
+<!--<div *ngFor="let course of courses">-->
+<!--  <h1>{{ title }}</h1>-->
+<!--  <app-course-list [content]="course"></app-course-list>-->
+<!--</div>-->
+
+
 <div class="app-container">
   <h1>{{ title }}</h1>
   <app-course-list></app-course-list>
