--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
-
-<!--<div *ngFor="let course of courses">-->
-<!--  <h1>{{ title }}</h1>-->
-<!--  <app-course-list [content]="course"></app-course-list>-->
-<!--</div>-->
-
-
 <div class="app-container">
+  <nav>
+    <ul>
+      <li><a routerLink="/">Home</a></li>
+      <li><a routerLink="/modify-list-item">Modify List Item</a></li>
+    </ul>
+  </nav>
+
   <h1>{{ title }}</h1>
   <app-course-list></app-course-list>
 </div>
