--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,1 +1,3 @@
-<p>page-not-found works!</p>
+<h1>Page Not Found</h1>
+<p>The page you are looking for could not be found.</p>
+<a routerLink="/">Go Back to Home</a>
