--- a/src/app/course-list/course-list.component.html
+++ b/src/app/course-list/course-list.component.html
@@ -7,13 +7,21 @@
 
 <!--<app-course-detail *ngFor="let course of courses; let i = index" [course]="course" [ngClass]="{'even-item':i%2 === 0, 'odd-item': i % 2 !== 0}"></app-course-detail>-->
 
-
- List of courses
-<div *ngFor="let course of courses">
-  <div (click)="onCourseClick(course.id)" [ngClass]="{'even-item': course.id % 2 === 0, 'odd-item': course.id % 2 !== 0}">
-    {{ course.subjectCode }} - {{ course.instructorName }}
+<div class="course-list">
+  <h2>Available Courses</h2>
+  <div *ngFor="let course of courses">
+    <div (click)="onCourseClick(course.id)" [ngClass]="{'even-item': course.id % 2 === 0, 'odd-item': course.id % 2 !== 0}" class="course-item">
+      <img [src]="course.imageUrl || 'Image'" alt="{{ course.instructorName }}" class="course-image"/>
+      <div class="course-info">
+        <h3>{{ course.subjectCode }} - {{ course.instructorName }}</h3>
+        <p>Email: {{ course.email }}</p>
+        <p>Marks: {{ course.marks }}</p>
+        <p *ngIf="course.isAdmin">Admin Access</p>
+      </div>
+    </div>
   </div>
 </div>
 
 <!-- Selected course details -->
-<app-course-detail [course]="selectedItem"></app-course-detail>
+<app-course-detail *ngIf="selectedItem" [course]="selectedItem"></app-course-detail>
+
